hphp/test/slow/parser/async-constructor.php.expectf
Fatal error: cannot declare constructors and magic methods such as '__construct' async in %s/async-constructor.php on line 4
